# cargo_ice_repo_2

./: Cargo.toml  rust-toolchain.toml
binary/: Cargo.toml
binary/src/: lib.rs  main.rs
src/: lib.rs
submod2/: Cargo.toml
