[package]
name = "cargo_ice_repo_2"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["binary"]
default-members = ["binary"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
submod2 = { git = "https://github.com/jmpesp/cargo_ice_repo_1", branch = "main" }
